--- a/views/home.erb
+++ b/views/home.erb
@@ -26,7 +26,7 @@
 <div class="slider">
 	<ul class="slides">
 		<li>
-			<img id="slide1" src="./images/Belarus2.jpg"> <!-- random image -->
+			<img id="slide1" src="./images/belarus3.jpg"> <!-- random image -->
 			<div class="caption left-align">
 				<h3>Kronospan-Smorgon signed a deal with BERSEY in Belarus</h3>
 				<h5 class="light grey-text text-lighten-3">Power Plant construction(60MW) will commence in 2017</h5>
@@ -140,12 +140,12 @@
 				<p class="grey-text text-lighten-4">Söğütlüçeşme Mah. Halkalı Cad. No:257 Bina:4 Sefaköy, 34295</p>
 				<p class="grey-text text-lighten-4">T: +90 212 693 74 74</p>
 				<p class="grey-text text-lighten-4">F: +90 212 495 48 50</p>
+				<p class="grey-text text-lighten-4">info@berseykazan.com</p>
 			</div>
 			<div class="col l3 s12">
 				<h5 class="white-text">Legal</h5>
 				<ul>
-					<li><a class="white-text" href="#!">Terms of Conditions</a></li>
-					<li><a class="white-text" href="#!">Legal Notice</a></li>
+					<li><a class="white-text" href="/terms">Terms and Conditions</a></li>
 				</ul>
 			</div>
 			<div class="col l3 s12">
