--- a/views/products.erb
+++ b/views/products.erb
@@ -1,13 +1,13 @@
 <div id="products-container">
-    <div id="products-align" class="row">
+    <div class="row relative-align">
     <div class="container">
       <div class="col s6 m4">
         <div class="card">
           <div class="card-image">
             <a href="/products/scotch"><img src="images/Belarus.jpg"></a>
           </div>
-          <div class="card-content">
-            <h6 class="center"><b>Scotch Type Steam Boilers</b></h6>
+          <div class="card-content blue-grey darken-4">
+            <h6 class="center white-text">Scotch Type Steam Boilers</h6>
           </div>
         </div>
       </div>
@@ -16,8 +16,8 @@
           <div class="card-image">
             <a href="/products/waterpipe"><img src="images/Belarus.jpg"></a>
           </div>
-          <div class="card-content">
-            <h6 class="center"><b>Water Pipe Steam Boilers</b></h6>
+          <div class="card-content blue-grey darken-4">
+            <h6 class="center white-text">Water Pipe Steam Boilers</h6>
           </div>
         </div>
       </div>
@@ -26,8 +26,8 @@
           <div class="card-image">
             <a href="/products/thermal"><img src="images/Belarus.jpg"></a>
           </div>
-          <div class="card-content">
-            <h6 class="center"><b>Thermal Oil Heaters</h6></b>
+          <div class="card-content blue-grey darken-4">
+            <h6 class="center white-text">Thermal Oil Heaters</h6>
           </div>
         </div>
       </div>
@@ -40,8 +40,8 @@
           <div class="card-image">
             <a href="/products/biomass"><img src="images/Belarus.jpg"></a>
           </div>
-          <div class="card-content">
-            <h6 class="center"><b>Biomass Fuel Boilers</h6></b>
+          <div class="card-content blue-grey darken-4">
+            <h6 class="center white-text">Biomass Fuel Boilers</h6>
           </div>
         </div>
       </div>
@@ -50,8 +50,8 @@
           <div class="card-image">
             <a href="/products/hotwater"><img src="images/Belarus.jpg"></a>
           </div>
-          <div class="card-content">
-            <h6 class="center"><b>Hot Water Boilers</h6></b>
+          <div class="card-content blue-grey darken-4">
+            <h6 class="center white-text">Hot Water Boilers</h6>
           </div>
         </div>
       </div>
@@ -60,8 +60,8 @@
           <div class="card-image">
             <a href="/products/wasteheat"><img src="images/Belarus.jpg"></a>
           </div>
-          <div class="card-content">
-            <h6 class="center"><b>Waste Heat Boilers</h6></b>
+          <div class="card-content blue-grey darken-4">
+            <h6 class="center white-text">Waste Heat Boilers</h6>
           </div>
         </div>
       </div>
@@ -74,8 +74,8 @@
           <div class="card-image">
             <a href="/products/fluidized"><img src="images/Belarus.jpg"></a>
           </div>
-          <div class="card-content">
-            <h6 class="center"><b>Fluidized Bed Boilers</b></h6>
+          <div class="card-content blue-grey darken-4">
+            <h6 class="center white-text">Fluidized Bed Boilers</h6>
           </div>
         </div>
       </div>
