--- a/views/references.erb
+++ b/views/references.erb
@@ -4,7 +4,7 @@
  			<div class="container">
  				<ul class="collapsible" data-collapsible="accordion">
  					<li>
- 						<div class="collapsible-header referencesheader">THERMAL OIL HEATERS</div>
+ 						<div class="collapsible-header referencesheader white-text blue-grey darken-4"><a href="#!" class="secondary-content"><i class="material-icons"><b>keyboard_arrow_down</b></i></a>THERMAL OIL HEATERS</div>
  						<div class="collapsible-body referencesbody">
  							<table class ="striped responsive-table bordered centered">
  								<thead>
@@ -1150,7 +1150,7 @@
  			<div class="container">
  				<ul class="collapsible" data-collapsible="accordion">
  					<li>
- 						<div class="collapsible-header referencesheader">SCOTCH TYPE STEAM BOILERS</div>
+ 						<div class="collapsible-header referencesheader white-text blue-grey darken-4"><a href="#!" class="secondary-content"><i class="material-icons"><b>keyboard_arrow_down</b></i></a>SCOTCH TYPE STEAM BOILERS</div>
  						<div class="collapsible-body referencesbody">
  							<table class ="striped responsive-table bordered">
  								<thead>
@@ -1889,7 +1889,7 @@
  			<div class="container">
  				<ul class="collapsible" data-collapsible="accordion">
  					<li>
- 						<div class="collapsible-header referencesheader">WATER TUBE STEAM BOILERS</div>
+ 						<div class="collapsible-header referencesheader white-text blue-grey darken-4"><a href="#!" class="secondary-content"><i class="material-icons"><b>keyboard_arrow_down</b></i></a>WATER TUBE STEAM BOILERS</div>
  						<div class="collapsible-body referencesbody">
  							<table class ="striped responsive-table bordered">
  								<thead>
@@ -2044,7 +2044,7 @@
  			<div class="container">
  				<ul class="collapsible" data-collapsible="accordion">
  					<li>
- 						<div class="collapsible-header referencesheader">FLUIDIZED BED STEAM BOILER</div>
+ 						<div class="collapsible-header referencesheader white-text blue-grey darken-4"><a href="#!" class="secondary-content"><i class="material-icons"><b>keyboard_arrow_down</b></i></a>FLUIDIZED BED STEAM BOILER</div>
  						<div class="collapsible-body referencesbody">
  							<table class ="striped responsive-table bordered">
  								<thead>
