--- a/views/career.erb
+++ b/views/career.erb
@@ -2,23 +2,25 @@
 <div class = "container">
 	<div class="section">
 		<div class="row">
-			<div class="col s12 center">
+			<div class="col l10">
 			<br>
 			<br>
 			<br>
 			<br>
-				<h4 class="center">CAREERS</h4>
+				<h4>CAREERS</h4>
+				<div class="divider blue-grey darken-4"></div>
+				<h5>We are always looking for talented individuals.</h5>
 				<br>
-				<h5 class="justify-align">We are always looking for talented individuals.</h5>
+				<p>For more than 35 years now, BERSEY is the most trusted Heat Generation System producer in Turkey. </p>
 				<br>
-				<p class="justify-align">For more than 35 years now, BERSEY is the most trusted Heat Generation System producer in Turkey. We’re delivering smart solutions for our clients – and providing the innovation and insight that comes from a proud history of delivery.</p>
+				<p>We’re delivering smart solutions for our clients – and providing the innovation and insight that comes from a proud history of delivery.</p>
 				<br>
-				<p class="justify-align">Our customers value the high degree of quality and service orientation and can always rely on the expertise and experience of our employees.</p>
+				<p>Our customers value the high degree of quality and service orientation and can always rely on the expertise and experience of our employees.</p>
 				</p>
 				<br>
-				<p class="justify-align">We’re looking for people who know how to apply their expertise to tackle our clients’ challenges.  Professionals who are excited by the type of work we do.</p>
+				<p>We’re looking for people who know how to apply their expertise to tackle our clients’ challenges.  Professionals who are excited by the type of work we do.</p>
 				<br>
-				<p class="justify-align">If this sounds like you please send us your resume to <strong>info@berseykazan.com</strong></p>
+				<p>If this sounds like you please send us your resume to <strong>info@berseykazan.com</strong></p>
 				<br>
 			</div>
 		</div>
