--- a/views/layout.erb
+++ b/views/layout.erb
@@ -40,7 +40,16 @@
 	</div>
 </header>
 <!--   Main Section   -->
-<%= yield %>	
+<main>
+<%= yield %>
+</main>
+<footer class="page-footer grey darken-4">
+	<div class="footer-copyright grey darken-4">
+		<div class="container">
+			<p class= "right grey-text text-lighten-4">© 2017 by BERSEY LTD STI. All rights reserved.</p>
+		</div>
+	</div>
+</footer>	
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="/js/materialize.js"></script>
 <script src="/js/home.js"></script>
