--- a/views/products.erb
+++ b/views/products.erb
@@ -1,84 +1,109 @@
-<div id="products-container">
-    <div class="row relative-align">
-    <div class="container">
-      <div class="col s6 m4">
-        <div class="card">
-          <div class="card-image">
-            <a href="/products/scotch"><img src="images/Belarus.jpg"></a>
-          </div>
-          <div class="card-content blue-grey darken-4">
-            <h6 class="center white-text">Scotch Type Steam Boilers</h6>
-          </div>
-        </div>
+<div class="image-container valign-wrapper">
+  <div class="container ">
+    <div class="row">
+    <div class="col l6 white-text">
+        <h5><a href="/products/scotch" class="btn-large">Scotch Type Steam Boilers</a></h5>
       </div>
-      <div class="col s6 m4">
-        <div class="card">
-          <div class="card-image">
-            <a href="/products/waterpipe"><img src="images/Belarus.jpg"></a>
-          </div>
-          <div class="card-content blue-grey darken-4">
-            <h6 class="center white-text">Water Pipe Steam Boilers</h6>
-          </div>
-        </div>
-      </div>
-      <div class="col s6 m4">
-        <div class="card">
-          <div class="card-image">
-            <a href="/products/thermal"><img src="images/Belarus.jpg"></a>
-          </div>
-          <div class="card-content blue-grey darken-4">
-            <h6 class="center white-text">Thermal Oil Heaters</h6>
-          </div>
-        </div>
-      </div>
-      </div>
+      <div class="col l6 white-text"><h5><a href="/products/waterpipe" class="btn-large product-list">Water Pipe Steam Boilers</a></h5></div>
     </div>
     <div class="row">
-    <div class="container">
-      <div class="col s6 m4">
-        <div class="card">
-          <div class="card-image">
-            <a href="/products/biomass"><img src="images/Belarus.jpg"></a>
-          </div>
-          <div class="card-content blue-grey darken-4">
-            <h6 class="center white-text">Biomass Fuel Boilers</h6>
-          </div>
-        </div>
+    <div class="col l6 white-text">
+        <h5><a href="/products/wasteheat" class="btn-large product-list">Waste Heat Boilers</a></h5>
       </div>
-      <div class="col s6 m4">
-        <div class="card">
-          <div class="card-image">
-            <a href="/products/hotwater"><img src="images/Belarus.jpg"></a>
-          </div>
-          <div class="card-content blue-grey darken-4">
-            <h6 class="center white-text">Hot Water Boilers</h6>
-          </div>
-        </div>
-      </div>
-      <div class="col s6 m4">
-        <div class="card">
-          <div class="card-image">
-            <a href="/products/wasteheat"><img src="images/Belarus.jpg"></a>
-          </div>
-          <div class="card-content blue-grey darken-4">
-            <h6 class="center white-text">Waste Heat Boilers</h6>
-          </div>
-        </div>
-      </div>
-      </div>
+      <div class="col l6 white-text"><h5><a href="/products/thermal" class="btn-large product-list">Thermal Oil Heaters</a></h5></div>
     </div>
     <div class="row">
-    <div class="container">
-      <div class="col s6 m4">
-        <div class="card">
-          <div class="card-image">
-            <a href="/products/fluidized"><img src="images/Belarus.jpg"></a>
-          </div>
-          <div class="card-content blue-grey darken-4">
-            <h6 class="center white-text">Fluidized Bed Boilers</h6>
-          </div>
-        </div>
+    <div class="col l6 white-text">
+        <h5><a href="/products/fluidized" class="btn-large product-list">Fluidized Bed Boilers</a></h5>
       </div>
-      </div>
+      <div class="col l6 white-text"><h5><a href="/products/biomass" class="btn-large product-list">Biomass Fuel Boilers</a></h5></div>
     </div>
+    <div class="row">
+    <div class="col l6 white-text">
+        <h5><a href="/products/hotwater" class="btn-large product-list">Hot Water Boilers</a></h5>
+      </div>
 </div>
+<!-- <div class="row">
+  <div class="container">
+    <div class="col s6 m4">
+      <div class="card">
+        <div class="card-image">
+          <a href="/products/scotch"><img src="images/Belarus.jpg"></a>
+        </div>
+        <div class="card-content blue-grey darken-4">
+          <h6 class="center white-text">Scotch Type Steam Boilers</h6>
+        </div>
+      </div>
+    </div>
+    <div class="col s6 m4">
+      <div class="card">
+        <div class="card-image">
+          <a href="/products/waterpipe"><img src="images/Belarus.jpg"></a>
+        </div>
+        <div class="card-content blue-grey darken-4">
+          <h6 class="center white-text">Water Pipe Steam Boilers</h6>
+        </div>
+      </div>
+    </div>
+    <div class="col s6 m4">
+      <div class="card">
+        <div class="card-image">
+          <a href="/products/thermal"><img src="images/Belarus.jpg"></a>
+        </div>
+        <div class="card-content blue-grey darken-4">
+          <h6 class="center white-text">Thermal Oil Heaters</h6>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="container">
+    <div class="col s6 m4">
+      <div class="card">
+        <div class="card-image">
+          <a href="/products/biomass"><img src="images/Belarus.jpg"></a>
+        </div>
+        <div class="card-content blue-grey darken-4">
+          <h6 class="center white-text">Biomass Fuel Boilers</h6>
+        </div>
+      </div>
+    </div>
+    <div class="col s6 m4">
+      <div class="card">
+        <div class="card-image">
+          <a href="/products/hotwater"><img src="images/Belarus.jpg"></a>
+        </div>
+        <div class="card-content blue-grey darken-4">
+          <h6 class="center white-text">Hot Water Boilers</h6>
+        </div>
+      </div>
+    </div>
+    <div class="col s6 m4">
+      <div class="card">
+        <div class="card-image">
+          <a href="/products/wasteheat"><img src="images/Belarus.jpg"></a>
+        </div>
+        <div class="card-content blue-grey darken-4">
+          <h6 class="center white-text">Waste Heat Boilers</h6>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="container">
+    <div class="col s6 m4">
+      <div class="card">
+        <div class="card-image">
+          <a href="/products/fluidized"><img src="images/Belarus.jpg"></a>
+        </div>
+        <div class="card-content blue-grey darken-4">
+          <h6 class="center white-text">Fluidized Bed Boilers</h6>
+        </div>
+      </div>
+    </div>
+  </div>
+</div> -->
+
+
