--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -2555,6 +2555,7 @@ a {
   color: #039be5;
   text-decoration: none;
   -webkit-tap-highlight-color: transparent;
+  z
 }
 
 .valign-wrapper {
@@ -2866,22 +2867,19 @@ ul.staggered-list li {
 }
 
 footer.page-footer {
-  padding-top: 20px;
-  background-color: #ee6e73;
+  padding: 5px;
 }
 
 footer.page-footer .footer-copyright {
   overflow: hidden;
-  min-height: 50px;
+  min-height: 20px;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 10px 0px;
-  color: rgba(255, 255, 255, 0.8);
-  background-color: rgba(51, 51, 51, 0.08);
+  padding: 5px 0px;
 }
 
 table, th, td {
@@ -4129,7 +4127,11 @@ nav ul li {
 }
 
 nav ul li.active {
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: #263238;
+}
+
+nav ul li.active a{
+  color: white;
 }
 
 nav ul a {
@@ -4921,7 +4923,7 @@ small {
 
 .btn, .btn-large,
 .btn-flat {
-  border: none;
+  border: 1px white solid;;
   border-radius: 2px;
   display: inline-block;
   height: 36px;
@@ -4994,7 +4996,7 @@ small {
 .btn, .btn-large {
   text-decoration: none;
   color: #fff;
-  background-color: #0099ff;
+  background-color: #263238;
   text-align: center;
   letter-spacing: .5px;
   transition: .2s ease-out;
