--- a/views/home.erb
+++ b/views/home.erb
@@ -23,7 +23,7 @@
 
 <!--   Sliders   -->
 
-<div class="slider">
+<div class="slider white">
 	<ul class="slides">
 		<li>
 			<img id="slide1" src="./images/belarus3.jpg"> <!-- random image -->
@@ -58,14 +58,15 @@
 
 <!--   About Us Section  -->
 
-<div class="container">
+<div class="white">
 	<div class="section">
 		<div class="row">
-			<div class="col s12 center">
+			<div class="col l10 center offset push-l1">
 				<!-- <h3><i class="mdi-content-send brown-text"></i></h3> -->
 				<h4 class="center">About Us</h4>
 				<br>
-				<p class="justify-align light">Bersey Limited Company, established in 1979, is an engineering company serving to different process industries where heat generation is required. Bersey designs and delivers complete heat generation systems -all its own design- that are oil fired, gas fired, waste fired, biomass fired, oil and gas co-fired. It is our main priority to supply "engineered solutions" to our costumers together with total manufacturing and quality satisfaction conforming with the international codes and standards that apply. Our robust engineering and technical background combined with the experience gained over the years made us a reliable solution-partner in various projects. Today Bersey produces various applications to major industries such as Wood and Wood Products Industries, Paper and Pulp Industries, Chemical Industry, Textile Industry, Vegetable Oil Production Plants, Plastics and Packaging Industries.</p>
+				<p class="justify-align light">Bersey Limited Company, established in 1979, is an engineering company serving to different process industries where heat generation is required. Bersey designs and delivers complete heat generation systems -all its own design- that are oil fired, gas fired, waste fired, biomass fired, oil and gas co-fired. It is our main priority to supply "engineered solutions" to our costumers together with total manufacturing and quality satisfaction conforming with the international codes and standards that apply. </p>
+				<p class="justify-align light">Our robust engineering and technical background combined with the experience gained over the years made us a reliable solution-partner in various projects. Today Bersey produces various applications to major industries such as Wood and Wood Products Industries, Paper and Pulp Industries, Chemical Industry, Textile Industry, Vegetable Oil Production Plants, Plastics and Packaging Industries.</p>
 			</div>
 		</div>
 	</div>
@@ -85,32 +86,34 @@
 
 <!--   Icon Section   -->
 
-<div class="container">
+<div class="white">
 	<div class="section">
 		<div class="row">
-			<div class="col s12 m4">
-				<div class="icon-block">
-					<h2 class="center grey-text text-darken-2"><i class="material-icons">flash_on</i></h2>
-					<h5 class="center">Industry Leader</h5>
+			<div class="col l10 push-l1">
+				<div class="col s4">
+					<div class="icon-block">
+						<h2 class="center grey-text text-darken-2"><i class="material-icons">flash_on</i></h2>
+						<h5 class="center">Industry Leader</h5>
 
-					<p class=" justify-align light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+						<p class=" justify-align light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+					</div>
 				</div>
-			</div>
 
-			<div class="col s12 m4">
-				<div class="icon-block">
-					<h2 class="center grey-text text-darken-2"><i class="material-icons">person</i></h2>
-					<h5 class="center">Client-Focused</h5>
-					<p class=" justify-align light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+				<div class="col s4">
+					<div class="icon-block">
+						<h2 class="center grey-text text-darken-2"><i class="material-icons">person</i></h2>
+						<h5 class="center">Client-Focused</h5>
+						<p class=" justify-align light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+					</div>
 				</div>
-			</div>
-			<div class="col s12 m4">
-				<div class="icon-block">
-					<h2 class="center grey-text text-darken-2"><i class="material-icons">access_time</i></h2>
-					<h5 class="center">On-Time Project Delivery</h5>
-					<p class=" justify-align light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+				<div class="col s4">
+					<div class="icon-block">
+						<h2 class="center grey-text text-darken-2"><i class="material-icons">access_time</i></h2>
+						<h5 class="center">On-Time Project Delivery</h5>
+						<p class=" justify-align light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+					</div>
 				</div>
-			</div>
+			</div>		
 		</div>
 	</div>
 </div>
@@ -154,11 +157,6 @@
 					<li><a class="white-text" href="https://www.linkedin.com/company-beta/10671411/" target=_blank><img id="linkedin" src=./images/linkedin.png></a></li>
 				</ul>
 			</div>
-		</div>
-	</div>
-	<div class="footer-copyright grey darken-4">
-		<div class="container">
-			<p class= "right grey-text text-lighten-4">© 2017 by BERSEY LTD STI. All rights reserved.</p>
 		</div>
 	</div>
 </footer>
